# bwcom

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  package-lock.json  package.json  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: execute.agent.md  plan.agent.md  refine.agent.md
.github/workflows/: build_test_client.yaml  ci.yml  deploy-prod.yml  deploy-test.yml  publish-lambda.yml  publish-test-bucket.yml  publish-test-website.yml  release.yml
bwcom/: README.md  karma.conf.js  package-lock.json  package.json
bwcom-api/: Dockerfile  WeatherForecast.cs  bwcom-api.csproj  bwcom-api.sln
bwcom-api/Controllers/: WeatherForecastController.cs
bwcom-api/Properties/: launchSettings.json
bwcom-backend/: cdk.json
bwcom-backend-cdk/lambda/: hello.js
bwcom-backend/cdk/: cdk.json
bwcom-backend/cdk-bwcom-backend/: cdk.context.json  cdk.json
bwcom-backend/src/: BwcomBackend.sln
bwcom-cdk/: cdk.json
bwcom-cdk/lambda/: hello.js  version.js
bwcom-cdk/src/: BwcomCdk.sln
bwcom-next/: Dockerfile  README.md  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json
bwcom-next/.github/: copilot-instructions.md
bwcom-next/app/: globals.css  layout.tsx  page.tsx
bwcom-next/components/: AboutMe.tsx  Allowance.tsx  Footer.tsx  GroupedTablePage.tsx  Main.tsx  Media.tsx  NavBar.tsx  (+9 more)
bwcom-static/: angular.json  karma.conf.js  package-lock.json  package.json
scripts/: deploy-test.sh  destroy-test.sh  legacy_races_import.py  strava_read_window.py  strava_to_training_log.py  sync-images.sh
(+151 files in other folders)
